<resources>
    <string name="app_name">Join</string>
    <integer name="com_vk_sdk_AppId">6731658</integer>
    <string name="facebook_app_id">178979386345136</string>
    <string name="fb_login_protocol_scheme">fb178979386345136</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up">Регистрация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="sign_up_username">Имя пользователя</string>
    <string name="sign_up_password">Пароль</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="projects_toolbar">Проекты</string>
    <string name="notifications_toolbar">Уведомления</string>
    <string name="project_details_toolbar">Детали</string>
    <string name="chat_toolbar">Сообщения</string>
    <string name="toolbar_title_empty" />
    <string name="toolbar_add_project">Новый проект</string>
    <string name="toolbar_users">Пользователи</string>
    <string name="restore_pass_title">Мы отправим код на вашу электронную почту</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="repeat">Повторить</string>
    <string name="download_error">Произошла ошибка при загрузке данных</string>
    <string name="profile">Гаязов Дамир</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_profile_edit">Редактировать профиль</string>
    <string name="btn_edit">Редактировать</string>
    <string name="do_sign_up">Зарегистрироваться</string>
    <string name="email_confirm_title">Для того, чтобы подтвердить вашу почту, введите код, который мы отправили вам на почту</string>
    <string name="settings">Настройки</string>
    <string name="type_your_message">Введите ваше сообщение</string>
    <string name="no_messages_yet">Ваш список сообщений пуст</string>
    <string name="popup_edit">Изменить</string>
    <string name="popup_delete">Удалить</string>
    <string name="username">Имя пользователя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="fill_field">Заполните поле</string>
    <string name="error_phone_number">Некорректный номер телефона</string>
    <string name="my_projects_toolbar">Мои проекты</string>
    <string name="exit">Выйти</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="make_photo">Сделать фото</string>
    <string name="open_gallery">Открыть галерею</string>
    <string name="dialog_exit_title">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="new_password">Новый пароль</string>
    <string name="send_code">Отправить код</string>
    <string name="change_password">Изменить пароль</string>
    <string name="restore_pass_description">Мы отправили код подтверждения на введенную вами электронную почту, введите его и придумайте новый пароль.</string>
    <string name="password_successfully_changed">Пароль успешно изменен</string>

    <!--Exceptions-->
    <string name="exception_incorrect_data">Некорректно заполнены поля</string>
    <string name="exception_no_connection">Отсутствует интернет соединение</string>
    <string name="exception_not_authorized">Для выполнения данного действия требуется авторизация</string>
    <string name="exception_time_out">Сервер просыпается&#8230;&#8230;&#8230;</string>
    <string name="exception_unexpected">Неизвестная ошибка</string>
    <string name="exception_sign_in">Неправильные имя пользователя или пароль</string>
    <string name="exception_email_already_exists">Пользователь с такой электронной почтой уже существует</string>
    <string name="exception_username_already_exists">Пользователь с таким именем пользователя уже существует</string>
    <string name="exception_invalid_code">Неверный код</string>
    <string name="exception_user_with_this_email_not_exists">Пользователь с такой электронной почтой не существует</string>

    <!--Errors-->
    <string name="error">Ошибка</string>
    <string name="error_email">Недопустимая электронная почта</string>
    <string name="error_password">Недопустимый пароль(должен содержать как минимум 7 символов) </string>
    <string name="error_password_should_be_equals">Пароли должны совпадать</string>
    <string name="error_username">Имя пользователя должно содержать как минимум 6 символов</string>
    <string name="error_code">Недопустимый код подтверждения(должен содержать ровно 6 символов)</string>
    <string name="spec_lvl">Уровень:</string>
    <string name="spec_experience">Опыт:</string>
    <string name="apply">Подать заявку</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>

    <!-- Push messages -->
    <string name="push_add_to_project_invite">Пользователь %s приглашает вас в проект %s</string>
    <string name="push_add_to_project_accept">Пользователь %s принял приглашение о вступлении в %s</string>
    <string name="push_add_to_project_refuse">Пользователь %s отклонил приглашение о вступлении в %s</string>
    <string name="push_join_to_project_invite">Пользователь %s хочет присоединиться в проект %s</string>
    <string name="push_join_to_project_accept">Вы были приняты в проект %s</string>
    <string name="push_join_to_project_refuse">Вас не приняли в проект %s</string>
    <string name="push_remove_from_project">Вас удалили из проекта %s</string>
    <string name="push_unknown">Неизвестный тип пуша</string>
    <string name="project_details_name">Название</string>
    <string name="project_details_descr">Описание</string>
    <string name="project_details_vacancies">Вакансии</string>
    <string name="project_details_no_vacancies">Нет доступных вакансий</string>
    <string name="project_details_team">Участники</string>
    <string name="project_details_add">Добавить участника</string>

    <string name="leave_project">Покинуть проект</string>
    <string name="join_project">Вступить в проект</string>
    <string name="request_sent">Заявка на вступление на рассмотрении</string>
    <string name="request_apply">Вас приглашают в проект, примите или отклоните заявку в окне уведомлений</string>
    <string name="edit_project">Изменение проекта</string>
    <string name="add_job">Добавить вакансию</string>
</resources>
