<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_restore_passs_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/restore_pass_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_restore_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_restore_passs_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_restore_pass_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_restore_pass_restore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_restore_pass_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/restore_password"
        android:textColor="@color/colorWhite" />

</RelativeLayout>